# UniverMag-Transpose

./: CMakeLists.txt  generate.cpp  main.cpp  tester.cpp
